--- a/week3/forge1/package.json
+++ b/week3/forge1/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@truffle/hdwallet-provider": "^2.1.7",
+    "alchemy-sdk": "^2.6.2",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
