--- a/week6/package.json
+++ b/week6/package.json
@@ -25,6 +25,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "web3": "^1.9.0"
   }
 }
