--- a/week3/package.json
+++ b/week3/package.json
@@ -2,6 +2,7 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-    "hardhat": "^2.13.0"
+    "hardhat": "^2.13.0",
+    "solidity-coverage": "^0.8.2"
   }
 }
