--- a/week6/package.json
+++ b/week6/package.json
@@ -1,31 +1,10 @@
 {
-  "name": "test",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "task-1": "hardhat run scripts/task-1.ts --network ropsten",
-    "start": "node index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "name": "hardhat-project",
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.2.2",
-    "@nomiclabs/hardhat-waffle": "^2.0.5",
-    "@types/chai": "^4.2.14",
-    "@types/mocha": "^8.2.0",
-    "@types/node": "^14.14.14",
-    "chai": "^4.3.7",
-    "ethereum-waffle": "^3.4.4",
-    "ethers": "^5.7.2",
-    "hardhat": "^2.13.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "hardhat": "^2.13.0"
   },
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "web3": "^1.9.0"
+    "@openzeppelin/contracts": "^4.8.2"
   }
 }
