--- a/week6/package.json
+++ b/week6/package.json
@@ -2,7 +2,9 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
-    "hardhat": "^2.13.0"
+    "hardhat": "^2.13.0",
+    "prettier": "^2.8.8",
+    "prettier-plugin-solidity": "^1.1.3"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.2"
