--- a/week6/package.json
+++ b/week6/package.json
@@ -7,6 +7,7 @@
     "prettier-plugin-solidity": "^1.1.3"
   },
   "dependencies": {
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
     "@openzeppelin/contracts": "^4.8.2"
   }
 }
