--- a/week9/package.json
+++ b/week9/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "@openzeppelin/contracts": "^4.8.3",
+    "keccak256": "^1.0.6",
+    "merkletreejs": "^0.3.10",
     "node": "^19.8.1"
   }
 }
