--- a/module11/package.json
+++ b/module11/package.json
@@ -1,6 +1,9 @@
 {
   "name": "hardhat-project",
   "dependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.2"
+    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "elliptic": "^6.5.4",
+    "ethereum-public-key-to-address": "^0.0.5",
+    "keccak256": "^1.0.6"
   }
 }
