--- a/module11/package.json
+++ b/module11/package.json
@@ -4,6 +4,7 @@
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "elliptic": "^6.5.4",
     "ethereum-public-key-to-address": "^0.0.5",
-    "keccak256": "^1.0.6"
+    "keccak256": "^1.0.6",
+    "web3": "^1.10.0"
   }
 }
