--- a/module11/package.json
+++ b/module11/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hardhat-project",
   "dependencies": {
+    "@ethereumjs/common": "^3.1.2",
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "elliptic": "^6.5.4",
     "ethereum-public-key-to-address": "^0.0.5",
